[package]
name = "websudoku-dl"
version = "0.2.0"
authors = ["J/A <archer884@gmail.com>"]
edition = "2018"
description = """
Download a websudoku puzzle by id
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["wrap_help"] }
regex = "1.4.2"
reqwest = { version = "0.10.10", features = ["blocking"] }
